@@ -46,9 +46,9 @@ Example
 
 
 def parse_arg(args):
-    d = {"file": None, "dirs": None, "debugger": False, "timer": False, "ast": False, "tokens": False,
+    d = {"file": None, "dir": None, "debugger": False, "timer": False, "ast": False, "tokens": False,
          "vars": False, "argv": [], "encoding": None, "exit": False, "exec_time": False, "link": False,
-         "import": True}
+         "import": True, "out": sys.stdout, "in": sys.stdin, "err": sys.stderr}
     i = 1
     while i < len(args):
         arg: str = args[i]
@@ -85,7 +85,7 @@ def parse_arg(args):
                 return None
             else:
                 d["file"] = arg
-                d["dirs"] = spl_lexer.get_dir(arg)
+                d["dir"] = spl_lexer.get_dir(arg)
                 d["argv"].append(arg)
         i += 1
     if d["file"] is None:
@@ -108,7 +108,7 @@ def interpret(mode: str):
 
     if mode == "sp":
         lexer = spl_lexer.Tokenizer()
-        lexer.setup(os.path.dirname(os.path.abspath(__file__)), file_name, argv["dirs"], link=argv["link"],
+        lexer.setup(os.path.dirname(os.path.abspath(__file__)), file_name, argv["dir"], link=argv["link"],
                     import_lang=argv["import"])
         lexer.tokenize(f)
     # elif mode == "lsp":
@@ -134,7 +134,9 @@ def interpret(mode: str):
 
     interpret_start = time.time()
 
-    itr = spl_interpreter.Interpreter(argv["argv"], argv["dirs"], argv["encoding"])
+    ioe = (argv["in"], argv["out"], argv["err"])
+
+    itr = spl_interpreter.Interpreter(argv["argv"], argv["dir"], argv["encoding"], ioe)
     itr.set_ast(block)
     result = itr.interpret()
 
