@@ -5,7 +5,8 @@ if __name__ == "__main__":
     root = tkinter.Tk()
 
     frame = tkinter.Frame()
-    setattr(frame, "master", root)
+    frame.master = root
+    # setattr(frame, "master", root)
 
     ey = tkinter.Entry(frame)
     a = tkinter.Text(frame)
@@ -15,6 +16,20 @@ if __name__ == "__main__":
 
     print(a.get("1.0", 'end'))
 
-    frame.pack()
+    # hbox.master = frame
+    t2 = tkinter.Label(hbox)
+    t2.configure(text="text")
+    # t2.master = hbox
+    t2.grid()
+    b3 = tkinter.Button(hbox)
+    b3.configure(text="btn")
+    # b3.master = hbox
+    b3.grid(row=0, column=1)
+    # hbox.configure(master=frame)
+    # # setattr(hbox, "master", frame)
+
+    hbox.grid(row=0)
+
+    frame.grid()
 
     root.mainloop()
