@@ -1,3 +1,15 @@
+********** SPL 1.6 Beta 5 **********
+===== Build 0080 2019/05/02 =====
+
+* Change in system:
+    * stdout, stderr, stdin are now SPL Objects, which is initialized in lang.sp
+* Native function re-implementation:
+    * main() and eval()
+* Spl lib updates:
+    * sgl.sp
+    * io.sp
+* Update idle
+
 ********** SPL 1.6 Beta 4 **********
 ===== Build 0079 2019/05/01 =====
 
